; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_usb.c_mt7601u_addr_wr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_usb.c_mt7601u_addr_wr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7601u_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mt7601u_addr_wr(%struct.mt7601u_dev* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.mt7601u_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store %struct.mt7601u_dev* %0, %struct.mt7601u_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.mt7601u_dev*, %struct.mt7601u_dev** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @get_unaligned_le32(i32* %9)
  %11 = call i32 @mt7601u_wr(%struct.mt7601u_dev* %7, i64 %8, i32 %10)
  %12 = load %struct.mt7601u_dev*, %struct.mt7601u_dev** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %13, 4
  %15 = load i32*, i32** %6, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 4
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 5
  %20 = load i32, i32* %19, align 4
  %21 = shl i32 %20, 8
  %22 = or i32 %17, %21
  %23 = call i32 @mt7601u_wr(%struct.mt7601u_dev* %12, i64 %14, i32 %22)
  ret void
}

declare dso_local i32 @mt7601u_wr(%struct.mt7601u_dev*, i64, i32) #1

declare dso_local i32 @get_unaligned_le32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
